; ModuleID = '/home/carl/AnghaBench/xLua/build/lua-5.3.4/src/extr_ltm.c_luaT_callbinTM.c'
source_filename = "/home/carl/AnghaBench/xLua/build/lua-5.3.4/src/extr_ltm.c_luaT_callbinTM.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @luaT_callbinTM(i32* %0, i32* %1, i32* %2, i32 %3, i32 %4) #0 {
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32*, align 8
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32*, align 8
  store i32* %0, i32** %7, align 8
  store i32* %1, i32** %8, align 8
  store i32* %2, i32** %9, align 8
  store i32 %3, i32* %10, align 4
  store i32 %4, i32* %11, align 4
  %13 = load i32*, i32** %7, align 8
  %14 = load i32*, i32** %8, align 8
  %15 = load i32, i32* %11, align 4
  %16 = call i32* @luaT_gettmbyobj(i32* %13, i32* %14, i32 %15)
  store i32* %16, i32** %12, align 8
  %17 = load i32*, i32** %12, align 8
  %18 = call i64 @ttisnil(i32* %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %25

20:                                               ; preds = %5
  %21 = load i32*, i32** %7, align 8
  %22 = load i32*, i32** %9, align 8
  %23 = load i32, i32* %11, align 4
  %24 = call i32* @luaT_gettmbyobj(i32* %21, i32* %22, i32 %23)
  store i32* %24, i32** %12, align 8
  br label %25

25:                                               ; preds = %20, %5
  %26 = load i32*, i32** %12, align 8
  %27 = call i64 @ttisnil(i32* %26)
  %28 = icmp ne i64 %27, 0
  br i1 %28, label %29, label %30

29:                                               ; preds = %25
  store i32 0, i32* %6, align 4
  br label %37

30:                                               ; preds = %25
  %31 = load i32*, i32** %7, align 8
  %32 = load i32*, i32** %12, align 8
  %33 = load i32*, i32** %8, align 8
  %34 = load i32*, i32** %9, align 8
  %35 = load i32, i32* %10, align 4
  %36 = call i32 @luaT_callTM(i32* %31, i32* %32, i32* %33, i32* %34, i32 %35, i32 1)
  store i32 1, i32* %6, align 4
  br label %37

37:                                               ; preds = %30, %29
  %38 = load i32, i32* %6, align 4
  ret i32 %38
}

declare dso_local i32* @luaT_gettmbyobj(i32*, i32*, i32) #1

declare dso_local i64 @ttisnil(i32*) #1

declare dso_local i32 @luaT_callTM(i32*, i32*, i32*, i32*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
